# RustLangExtract

./: .gitignore  Cargo.toml  README.md  example.txt  medical_prompt.txt
prompts/: finance.txt  legal.txt  medical.txt
src/: main.rs
