[package]
name = "rustlangextract"
version = "0.1.0"
edition = "2021"
description = "Rust-native, schema-enforced structured extraction from text using OpenAI (GPT-5) with Parquet output + HTML visualization"
license = "MIT"
repository = "https://github.com/yourname/RustLangExtract"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }
ropey = "1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"


# Arrow2 + Parquet (fast, actively maintained)
arrow2 = { version = "0.18", features = ["io_parquet", "io_parquet_zstd", "io_parquet_compression"] }

# Tokio for async HTTP
tokio = { version = "1", features = ["full"] }
